# kis-selfhosted

./: README.md
.github/workflows/: build-and-push.yml
MCP/Kis Trading MCP/configs/: auth.json  domestic_bond.json  domestic_futureoption.json  domestic_stock.json  elw.json  etfetn.json  overseas_futureoption.json  overseas_stock.json
MCP/Kis Trading MCP/module/plugin/: kis.py
MCP/Kis Trading MCP/tools/: base.py
backtester/backend/: main.py
backtester/backend/routes/: backtest.py
backtester/frontend/: next.config.ts
backtester/kis_backtest/codegen/: generator.py
backtester/kis_backtest/lean/: executor.py
backtester/kis_mcp/: server.py
backtester/kis_mcp/tools/: backtest.py
deploy/: .env.example  docker-compose.prod.yml  docker-compose.yml
deploy/admin/: auth.py  config_manager.py  gateway.py  main.py  oauth.py
deploy/admin/templates/: index.html
deploy/dockerfiles/: Dockerfile.admin  Dockerfile.backtest-backend  Dockerfile.backtest-frontend  Dockerfile.backtest-mcp  Dockerfile.strategy-backend  Dockerfile.strategy-frontend
deploy/scripts/: init-kis-config.py
examples_llm/: kis_auth.py
selfhosted/: .env.example  docker-compose.prod.yml  docker-compose.yml
selfhosted/admin/: gateway.py  main.py  oauth.py  pyproject.toml  test_gateway.py
selfhosted/admin/templates/: login.html
selfhosted/dockerfiles/: Dockerfile.admin  Dockerfile.backtest-backend  Dockerfile.backtest-mcp  Dockerfile.strategy-frontend
strategy_builder/: kis_auth.py
strategy_builder/backend/: main.py
strategy_builder/frontend/: next.config.ts
(+4 files in other folders)
