[project]
name = "kis-admin-gateway"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.28",
    "python-jose[cryptography]>=3.3",
"jinja2>=3.1",
    "python-multipart>=0.0.18",
    "pyyaml>=6.0",
    "itsdangerous>=2.2",
]
